# tabex

./: .gitignore  Cargo.toml  Example1_F.dot  LICENSE  Notes.md  README.md  g.dot  graph.dot  graph2.dot  graph3.dot  justfile  output.txt  output_F.json  output_F_or.json  output_G.json  output_and.txt  output_or.json  output_or.txt  perf.data  perf.data.old  run_similarity.py
.github/workflows/: rust.yml
benchmarks/Manual/: benchmark_gen.sh  equivlance_tests.sh  restable.tex
dotparser/: input_creator.py  tabex.py
figures/: README_old.md
m_stlsat/: Cargo.toml  README.md  graph_F.dot  graph_G.dot
m_stlsat/scripts/: make_plots.sh  parallel_sat.sh  plot.py  requirements.txt  run_mltl_comparison.sh  strip_bench_paths.py
m_stlsat/src/: lib.rs  rb.rs  scanner.rs
resources/: formulas.stl
resources/benchmarks/: avionics.stl  battery.stl  cooling.stl  cps.stl  irrigation.stl  mtl.stl
resources/random_problem/: 1.stl  2.stl  3.stl  4.stl  5.stl  6.stl
scripts/: compare_results.py  make_plots.sh  parallel_sat.sh  plot.py  plot_benchmark_stats.py  random_rb.sh  run_bench.py  run_mltl_comparison.sh  run_random_stl_comparison.sh  stl_benchmarks.py  stl_benchmarks.sh  synth_best_of.py
scripts/output_mltl/: tableau_nasa-boeing.csv
similarity/: stl_similarity.py
src/: config.rs  decompose.rs  formula.rs  lib.rs  main.rs  node.rs  parser.rs  rb.rs  rewrite.rs  scanner.rs  solver.rs  store.rs  tableau.rs
src/decompose/: tests.rs
src/formula/: mod.rs  parser.rs  statistics.rs  transform.rs
src/node/: decompose.rs  mod.rs  rewrite.rs
src/rewrite/: tests.rs
(+4096 files in other folders)
