[package]
name = "stlcc"
version = "0.1.0"
edition = "2024"
default-run = "stlcc"

[lib]
name = "stlcc"
path = "src/lib.rs"

[[bin]]
name = "stlcc"
path = "src/main.rs"

[[bin]]
name = "scanner"
path = "src/scanner.rs"

[[bin]]
name = "rb"
path = "stc/rb.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dot_graph = "0.2.3"
nom = "8.0.0"
num-rational = "0.4.2"
z3 = { version = "0.18.2", features = ["gh-release"] }